# WaveFunctionCollapse

./: .gitignore  README.md  pyproject.toml  setup.py  setup_project.json  wfc.py
src/WaveFunctionCollaps/: canvas.py  image.py  main.py  tileset.py
src/WaveFunctionCollaps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_canvas.py  test_grid.py  test_image.py  test_sample.py  test_tile.py  test_tileset.py
